2011-10-27  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests doesn't understand --qt or --gtk
        https://bugs.webkit.org/show_bug.cgi?id=63970

        Reviewed by Ojan Vafai.

        Add support for --qt and --gtk to NRWT.
        I also removed some incorrect comments in the option parsing
        code (options which we already implement, but said we didn't)
        as well as moved --platform parsing out of the "results_options"
        section into the top configuration section.

        Now run-webkit-tests no longer needs NRWT-specific code for passing
        --platform=qt, etc.

        * Scripts/run-webkit-tests:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2011-10-27  Eric Seidel  <eric@webkit.org>

        REGRESSION (NRWT): build.webkit.org doesn't show the total number of leaks found during a test run on the Leaks bot
        https://bugs.webkit.org/show_bug.cgi?id=66227

        Reviewed by Adam Roben.

        I believe this should fix the bug.

        * Scripts/run-webkit-tests: make NRWT default for --leaks
        * Scripts/webkitpy/layout_tests/port/leakdetector.py:
        (LeakDetector._parse_leaks_output): removed the (unneeded) process_pid argument, and made the regexp use named groups (even though we don't ever grab them by name)
        (LeakDetector.count_total_bytes_and_unique_leaks): renamed from parse_leak_files
        (LeakDetector.count_total_leaks): new file (the guts of this change) which is used to re-parse the leaks output during the summarize leaks phase.
        * Scripts/webkitpy/layout_tests/port/leakdetector_unittest.py:
        Changes to reflect the rename of count_total_bytes_and_unique_leaks and a new test for count_total_leaks.
        * Scripts/webkitpy/layout_tests/port/mac.py:
        Use count_total_leaks to spit out the total leak count like ORWT did, and remove the FIXME on the subject.

2011-10-27  Stephen Chenney  <schenney@chromium.org>

        [Chromium] Need setPrinting